Fix tabs heights to prevent page shifting

--- a/root/static/css/application.css
+++ b/root/static/css/application.css
@@ -24,3 +24,11 @@ body {
 .nav {
     margin-bottom: 0px;
 }
+
+#gfx-holder {
+    overflow: auto;
+}
+
+#treexview {
+    margin-bottom: 10px;
+}
